# pipeline-demo

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  INode.cpp  INode.h  INodeFactory.h  IPipeline.h  NodeImpl.cpp  NodeImpl.h  NodeInfo.h
gui/: CMakeLists.txt  ConnectionItem.cpp  ConnectionItem.h  NodeItem.cpp  NodeItem.h  PipelineScene.cpp  PipelineScene.h  PipelineWidget.cpp  PipelineWidget.h
logic/: CMakeLists.txt  NodeFactory.cpp  NodeFactory.h  NodeFactorySingleton.cpp  NodeFactorySingleton.h  Pipeline.cpp  Pipeline.h
logic/nodes/: SimpleDataGenerator.cpp  SimpleDataGenerator.h
src/: CMakeLists.txt  ISolver.h  MinusSolver.cpp  MinusSolver.h  Pipeline.cpp  Pipeline.h  PlusSolver.cpp  PlusSolver.h  pipeline.h  solver.h
tests/: CMakeLists.txt  test_pipeline.cpp
